--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.6	Mon  8 Aug 15:14:09 BST 2022
+	* Fix build
 v0.0.5	Sun  7 Aug 09:44:11 BST 2022
 	* Upload to zef repository
 v0.0.4		Thu 21 Jan 09:56:36 GMT 2021
